Generando archivos estaticos con pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     title Title Page
     link(href='https://fonts.googleapis.com/css?family=Prompt|Indie+Flower', rel='stylesheet')
-    link(rel='stylesheet', href='public/app.css')
+    link(rel='stylesheet', href='app.css')
   body
     section#main-container
     footer.site-footer
