--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ html
   head 
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
     meta(charset='utf-8')
-    title Title Page
+    title=title 
     link(href='https://fonts.googleapis.com/css?family=Prompt|Indie+Flower', rel='stylesheet')
     link(rel='stylesheet', href='app.css')
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
