--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,8 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
     meta(charset='utf-8')
     title=title 
-    link(href='https://fonts.googleapis.com/css?family=Prompt|Indie+Flower', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Prompt|Montserrat|Oleo+Script', rel='stylesheet')
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
     link(rel='stylesheet', href='app.css')
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
