--- a/index.scss
+++ b/index.scss
@@ -70,9 +70,40 @@ body {
    padding: 30px 0;
 }
 
+$avatar-size: 48px;
 
+.avatar {
+   width: $avatar-size;
+   height: $avatar-size;
+   border-radius: 50%;
+   float: left;
+   margin-right: 12px;
+}
 
+.card .username {
+   color: $secondary-color;
+}
 
+.card small.time {
+   line-height: $avatar-size;
+}
+
+.card p {
+   padding: 20px 0;
+}
+
+.card .likes {
+   line-height: 30px;
+   margin-left: 12px;
+}
+
+.card i {
+   font-size: 30px;
+}
+
+.card .fa-heart-o {
+   color: $secondary-color;
+}
 
 
 
