--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,17 @@
 $secondary-color: #125688;
+$platzigram-red: #f44336;
 
 @import "node_modules/materialize-css/sass/materialize.scss";
+@import "./loader";
+
+@mixin prefix($property, $value, $vendors: webkit moz ms o) {
+  @if $vendors {
+    @each $vendor in $vendors {
+      #{"-" + $vendor + "-" + $property}: #{$value};
+    }
+  }
+  #{$property}: #{$value};
+}
 
 body {
    background: #fafafa;
