--- a/public/app.css
+++ b/public/app.css
@@ -6390,6 +6390,65 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   .picker--time .picker__box {
     margin-bottom: 5em; } }
 
+.loader {
+  font-size: 10px;
+  margin: 50px auto;
+  text-indent: -9999em;
+  width: 11em;
+  height: 11em;
+  border-radius: 50%;
+  background: #0b558a;
+  background: -moz-linear-gradient(left, #0b558a 10%, rgba(11, 85, 138, 0) 42%);
+  background: -webkit-linear-gradient(left, #0b558a 10%, rgba(11, 85, 138, 0) 42%);
+  background: -o-linear-gradient(left, #0b558a 10%, rgba(11, 85, 138, 0) 42%);
+  background: -ms-linear-gradient(left, #0b558a 10%, rgba(11, 85, 138, 0) 42%);
+  background: linear-gradient(to right, #0b558a 10%, rgba(11, 85, 138, 0) 42%);
+  position: relative;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0); }
+
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #0b558a;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: ''; }
+
+.loader:after {
+  background: #fafafa;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; }
+
+@-webkit-keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
 body {
   background: #fafafa;
   color: #125688;
@@ -6468,17 +6527,19 @@ body {
 .card i {
   font-size: 30px; }
 
-.card .fa-heart-o {
+.fa-heart-o {
   color: #125688; }
 
-.card .fa-heart {
-  color: #f44336;
+.fa-heart {
+  color: #f44336; }
+
+.heart {
   display: none; }
 
-.card.liked .fa-heart {
+.card.liked .heart {
   display: block; }
 
-.card.liked .fa-heart-o {
+.card.liked .heart-o {
   display: none; }
 
 .form-upload span, .form-upload button {
@@ -6499,3 +6560,67 @@ body {
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0); }
+
+.user-page {
+  margin-top: 30px; }
+  .user-page .heading {
+    margin-bottom: 20px; }
+  .user-page .picture-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    margin-bottom: 20px;
+    position: relative; }
+    .user-page .picture-container:hover .picture {
+      -webkit-filter: blur(5px) grayscale(100%);
+      -moz-filter: blur(5px) grayscale(100%);
+      -ms-filter: blur(5px) grayscale(100%);
+      -o-filter: blur(5px) grayscale(100%);
+      filter: blur(5px) grayscale(100%); }
+    .user-page .picture-container:hover .likes {
+      display: flex; }
+    .user-page .picture-container .picture {
+      margin-bottom: 20px;
+      display: block;
+      max-width: 100%;
+      max-height: 100%; }
+    .user-page .picture-container .likes {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      color: #f44336;
+      font-size: none; }
+    .user-page .picture-container .fa-heart {
+      margin-right: 8px;
+      display: inline-block; }
+
+.modal img {
+  max-height: 100%;
+  max-width: 90%; }
+
+.modal .fa-heart {
+  display: inline-block; }
+
+.like-heart {
+  font-size: 10em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  transition: all .1s ease;
+  opacity: 0; }
+
+.like-heart.liked {
+  color: #f44336;
+  font-size: 12em;
+  display: block;
+  transition: all .5s ease;
+  opacity: 1; }
