--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
     title=title 
     link(href='https://fonts.googleapis.com/css?family=Prompt|Montserrat|Oleo+Script', rel='stylesheet')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
-    link(rel='stylesheet', href='app.css')
+    link(rel='stylesheet', href='/app.css')
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
     link(rel='apple-touch-icon', sizes='72x72', href='/apple-icon-72x72.png')
@@ -28,4 +28,4 @@ html
     section#main-container      
   script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=',crossorigin='anonymous')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js')
-  script(type='application/javaScript' src='app.js')
+  script(type='application/javaScript' src='/app.js')
